tdf#120865: preserve cursor shape on repositioning the cursor

i.e. don't recreate cursor with new (default) arrow shape in
SalFrame::SetPointerPos, but simply move the existing one

Change-Id: I3406ceff25a53de6f2afa318114370c318e6a500